// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`event-filter-form Renders \`event-filter-form\` with \`break\` type 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="break"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <!---->
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`change_entity\` type 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="change_entity"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <!---->
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <hr
    class="my-3 v-divider theme--light"
  />
  <c-information-block-stub
    title="Configuration"
  >
    <event-filter-change-entity-form-stub
      form="[object Object]"
      name="config"
    />
    <!---->
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`drop\` type 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="drop"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-1"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with \`enrichment\` type 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="enrichment"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <!---->
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <hr
    class="my-3 v-divider theme--light"
  />
  <c-information-block-stub
    title="Configuration"
  >
    <!---->
    <event-filter-enrichment-form-stub
      form="[object Object]"
      name="actions"
    />
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with change entity type 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="change_entity"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <!---->
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <hr
    class="my-3 v-divider theme--light"
  />
  <c-information-block-stub
    title="Configuration"
  >
    <event-filter-change-entity-form-stub
      form="[object Object]"
      name="config"
    />
    <!---->
  </c-information-block-stub>
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with custom props 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
    value="event-filter-id"
  />
  <c-event-filter-type-field-stub
    value="drop"
  />
  <c-description-field-stub
    required="required"
    value="event-filter-description"
  />
  <c-priority-field-stub
    value="2"
  />
  <c-enabled-field-stub
    value="true"
  />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <pbehavior-recurrence-rule-field-stub
    class="mb-1"
    form="[object Object]"
  />
  <c-patterns-field-stub
    some-required="some-required"
    value="[object Object]"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;

exports[`event-filter-form Renders \`event-filter-form\` with default props 1`] = `
<div>
  <c-id-field-stub
    help-text="If no id is specified, a unique id will be generated automatically on rule creation"
  />
  <c-event-filter-type-field-stub />
  <c-description-field-stub
    required="required"
  />
  <c-priority-field-stub />
  <c-enabled-field-stub />
  <c-information-block-stub
    title="Applied during this period only"
  >
    <event-filter-drop-intervals-field-stub
      form="[object Object]"
    />
  </c-information-block-stub>
  <!---->
  <c-patterns-field-stub
    some-required="some-required"
    with-entity="with-entity"
    with-event="with-event"
  />
  <!---->
</div>
`;
